--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     padding: 0;
@@ -8,19 +8,19 @@
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 4rem;
     line-height: 64px;
     color: #222;
 }
 
 h2 {
-    font-size: 46px;
+    font-size: 3rem;
     line-height: 54px;
     color : #222;
 }
 
 h4{
-    font-size: 20px;
+    font-size: 2rem;
     color: #222;
 }
 
@@ -35,3 +35,220 @@ p{
     margin: 15px 0 20px 0;
 }
 
+.section-p1{
+    padding: 40px 80px;
+}
+
+.section-m1{
+    margin: 40px 0;
+}
+
+body{
+    width: 100%;
+}
+
+/* Header Start */
+
+#header {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 40px;
+    background: #E3E6F3;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+#navbar {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#navbar li {
+    list-style: none;
+    padding: 0 30px;
+    position: relative;
+}
+
+#navbar li a{
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+    
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+    color: #8056cf;
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after{
+    content:"";
+    width: 30%;
+    height: 2px;
+    background: #8056cf;
+    position:absolute;
+    bottom: -4px;
+    left: 30px;
+}
+
+/* Hero Section Start  */
+#hero{
+    background-image: url(img/hero1.jpg);
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+    padding: 0 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero h2, h1, h4, p, button{
+    font-family: "Bebas Neue";
+}
+
+#hero h4{
+    padding-bottom: 15px;
+}
+#hero p{
+    font-size: 1rem;
+}
+
+#hero button{
+    background-image: url(img/button1.png);
+    background-size: cover;
+    background-color: transparent;
+    color: #1a1a1a;
+    border: 0;
+    font-size: 1.5rem;
+    padding: 10px 30px;
+    background-repeat: no-repeat;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+#feature{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box{
+    height: 200px;
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    border: 1px #cfcfcf solid ;
+    box-shadow: 20px 20px 34px rgb(0,0,0,0.03);
+    border-radius: 4px;
+    margin: 15px 0;
+}
+
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgb(212, 212, 212);
+}
+
+#feature .fe-box img{
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+#feature .fe-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #1a1a1a;
+    background-color: #85FF8E;
+}
+
+#feature .fe-box:nth-child(2) h6{
+    background: #d4ff85;
+}
+#feature .fe-box:nth-child(3) h6{
+    background: #fff385;
+}
+#feature .fe-box:nth-child(4) h6{
+    background: #ffa885;
+}
+#feature .fe-box:nth-child(5) h6{
+    background: #85c4ff;
+}
+#feature .fe-box:nth-child(6) h6{
+    background: #ffaaf4;
+}
+
+#product1{
+    text-align: center;
+}
+
+#product1 .pro{
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #E3E6F3;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    margin: 15px 0;
+    transition: 0.2s ease;
+}
+
+#product1 .pro:hover{
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);   
+}
+
+#product1 .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+#product1 .pro .des{
+    text-align: start;
+    padding: 10px 0;
+}
+
+#product1 .pro .des span{
+    color: #8a8a8a;
+    font-size: 12px;
+}
+
+#product1 .pro .des h5{
+    padding-top: 7px;
+    color: #1a1a1a;
+    font-size: 15px;
+}
+
+#product1 .pro .des i{
+    font-size: 12px;
+    color: rgb(243, 181, 25);
+}
+
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 25px;
+    font-weight: 700;
+    color: #2a7957;
+}
+
+#product1 .pro .cart{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: #e8f6ea;
+    font-weight: 500;
+    color: #2a7957;
+    border: 1px solid #d0e2d0;
+}
